updated requirements and README

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,284 +1,7 @@
-ads==0.12.7
-aerospike_vector_search==4.1.1
-aiodns==3.2.0
-airbyte_cdk==6.45.3
-aleph_alpha_client==10.0.1
-alibabacloud_ha3engine_vector==1.1.15
-alibabacloud_tea_util==0.3.13
-apify_client==1.9.3
-arango==0.2.1
-arcgis==2.4.0
-argilla==2.8.0
-arize==7.38.1
-arthurai==3.33.3
-asgiref==3.8.1
-astrapy==2.0.1
-atlassian==0.0.0
-azure_storage==0.37.0
-azureml==0.2.7
-baidubce==0.8.3
-banana_dev==6.3.0
-bibtexparser==1.4.3
-bigdl==2.4.0
-bilibili_api==9.1.0
-boto3==1.37.34
-botocore==1.37.34
-brotli==1.1.0
-brotlicffi==1.1.0.0
-cassio==0.1.10
-chromadb==1.0.4
-clarifai_grpc==11.3.2
-clickhouse_connect==0.8.17
-cloudpathlib==0.21.0
-cloudpickle==3.1.1
-comet_llm==2.2.7
-ConfigParser==7.2.0
-confluent_kafka==2.9.0
-contextlib2==21.6.0
-cryptography==44.0.2
-curio==1.6
-cx_Oracle==8.3.0
-Cython==3.0.12
-datadog_api_client==2.34.0
-datasets==3.5.0
-deepeval==2.7.2
-defusedxml==0.7.1
-dgml_utils==0.3.4
-dingodb==0.0.18
-dl==0.1.0
-doctran==0.0.14
-docutils==0.21.2
-docx2txt==0.9
-dria==0.0.124
-dynamodb_encryption_sdk==3.3.0
-e2b==1.3.4
-elevenlabs==1.56.0
-email_validator==2.2.0
-esprima==4.0.1
-eval_type_backport==0.2.2
-extract_msg==0.54.1
-fake_useragent==2.2.0
-faster_whisper==1.1.1
-feedparser==6.0.11
-firebase_admin==6.7.0
-fitz==0.0.1.dev2
-flashrank==0.2.10
-flytekit==1.15.3
-geopandas==1.0.1
-gliner==0.2.17
-google_api_python_client==2.167.0
-google_auth_oauthlib==1.2.1
-googlemaps==4.10.0
-gptcache==0.1.44
-gpudb==7.2.2.7
-gql==3.5.2
-gradientai==1.13.1
-grandalf==0.8
-graphviz==0.20.3
-grpcio==1.71.0
-guardrails==2.0.0
-gunicorn==23.0.0
-h2==4.2.0
-hdbcli==2.24.24
-hologres_vector==0.0.10
-HTMLParser==0.0.2
-hypothesis==6.131.0
-ibm_watsonx_ai==1.3.6
-infinity_client==0.0.76
-infinity_emb==0.0.76
-InstructorEmbedding==1.0.1
-intel_extension_for_transformers==1.4.2
-ipython==8.12.3
-ipywidgets==8.1.6
-jaguardb_http_client==3.4.3
-javelin_sdk==0.2.33
-jnius==1.1.0
-joblib==1.4.2
-jq==1.8.0
-js==1.0
-jsonschema==4.23.0
-kdbai_client==1.6.0
-keybert==0.9.0
-keyring==25.6.0
-label_studio_sdk==1.0.11
-langchain_anthropic==0.3.10
-langchain_astradb==0.6.0
-langchain_aws==0.2.19
-langchain_azure_ai==0.1.2
-langchain_chroma==0.2.2
-langchain_cohere==0.4.4
-langchain_deepseek==0.1.3
-langchain_elasticsearch==0.3.2
-langchain_experimental==0.3.4
-langchain_fireworks==0.2.9
-langchain_google_genai==2.1.2
-langchain_google_vertexai==2.0.20
-langchain_groq==0.3.2
-langchain_huggingface==0.1.2
-langchain_ibm==0.3.10
-langchain_mistralai==0.2.10
-langchain_mongodb==0.6.0
-langchain_neo4j==0.4.0
-langchain_nvidia_ai_endpoints==0.3.9
-langchain_ollama==0.3.1
-langchain_openai==0.3.12
-langchain_perplexity==0.1.0
-langchain_pinecone==0.2.5
-langchain_postgres==0.0.14
-langchain_qdrant==0.2.0
-langchain_together==0.3.0
-langchain_weaviate==0.0.4
-langchain_xai==0.2.3
-langchainhub==0.1.21
-langsmith_pyo3==0.1.0rc5
-lark==1.2.2
-laser_encoders==0.0.2
-librosa==0.11.0
-listparser==0.20
-llmlingua==0.2.2
-llmonitor==0.0.51
-lockfile==0.12.2
-lorax==0.94.86
-lxml==5.3.2
-manticoresearch==8.0.0
-mask==1.0.0
-mediawikiapi==1.3
-metal_sdk==2.5.1
-mlx_lm==0.22.5
-modelscope==1.25.0
-modin==0.32.0
-motor==3.7.0
-msal==1.32.0
-mtrand==0.1
-mwparserfromhell==0.6.6
-mwxml==0.3.6
-nest_asyncio==1.6.0
-newspaper==0.1.0.7
-nlu==5.4.1
-nomic==3.4.1
-nucliadb_models==6.3.5.post4033
-nucliadb_protos==6.3.5.post4033
-numarray==1.5.1
-Numeric==24.2
-numexpr==2.10.2
-O365==2.1.2
-objgraph==3.6.2
-obs==0.0.0
-oci==2.150.1
-odps==3.5.1
-openapi_pydantic==0.5.1
-optimum==1.24.0
-outcome==1.3.0.post0
-pdf2image==1.17.0
-pdfminer==20191125
-pdfplumber==0.11.6
-pickle5==0.0.12
-Pillow==11.2.1
-pinecone_text==0.10.0
-polars==1.27.1
-praw==7.8.1
-promptlayer==1.0.46
-psutil==7.0.0
-psychicapi==0.8.4
-pyairtable==3.1.1
-pydub==0.25.1
-pyepsilla==0.3.14
-pygraphviz==1.14
-PyInstaller==6.12.0
-PyJWT==2.10.1
-pymemcache==4.0.0
-pymilvus==2.5.6
-pymongo==4.12.0
-pymupdf==1.25.5
-pyodide==0.0.2
-pyOpenSSL==25.0.0
-pyowm==3.3.0
-pypdf==5.4.0
-PyPDF2==3.0.1
-pypdfium2==4.30.1
-pyppeteer==2.0.0
-pyspark==3.5.5
-pysqlcipher3==1.2.0
-pysrt==1.1.2
-pytesseract==0.3.13
-pytest==8.3.5
-python-decouple==3.8
-python_magic==0.4.27
-pyTigerGraph==1.8.6
-pytube==15.0.0
-pytz==2025.2
-qcloud_cos==3.3.6
-qdrant_client==1.13.3
-qianfan==0.4.12.3
-railroad==0.5.0
-rank_bm25==0.2.2
-rank_llm==0.21.0
-rapidfuzz==3.13.0
-rapidocr_onnxruntime==1.4.4
-rdflib==7.1.4
-reportlab==4.3.1
-rizaio==0.10.0
-rockset==2.1.2
-rspace_client==2.6.1
-runhouse==0.0.42
-scipy_doctest==1.7.1
-scrapingant_client==2.1.0
-selenium==4.31.0
-semantic_version==2.10.0
-simplejson==3.20.1
-simsimd==6.2.1
-slack_sdk==3.35.0
-socksio==1.0.0
-sodapy==2.2.0
-speechkit==2.2.3
-Sphinx==8.2.3
-sqlcipher3==0.5.4
-sqlite_vec==0.1.6
-sqlite_vss==0.1.2
-sseclient==0.0.27
-stackapi==0.3.1
-steamship==2.17.34
-steamspypi==1.1.1
-svglib==1.5.1
-takeoff_client==0.6.0
-telethon==1.39.0
-tensorflow==2.19.0
-tensorflow_text==2.19.0
-text_generation==0.7.0
-textractor==0.1.2
-thirdai==0.9.31
-threadpoolctl==3.6.0
-tigrisdb==1.0.0b6
-tiktoken==0.9.0
-timescale_vector==0.0.7
-tokenizers==0.21.1
-torch==2.2.2
-torch_npu==2.4.0.post2
-tornado==6.4.2
-tqdm==4.67.1
-tree_sitter==0.24.0
-tree_sitter_languages==1.10.2
-trove_classifiers==2025.4.11.15
-trubrics==1.8.5
-truststore==0.10.1
-tweepy==4.15.0
-upstash_ratelimit==1.1.0
-upstash_vector==0.8.0
-urllib3_secure_extra==0.1.0
-uvloop==0.21.0
-vearch_cluster==0.0.2
-watchdog==6.0.0
-websocket_client==1.8.0
-whylogs==1.6.4
-wikibase_rest_api_client==0.2.2
-wolframalpha==5.1.3
-writerai==4.0.1
-xinference_client==1.4.1
-xlrd==2.0.1
-xmlrpclib==1.0.1
-xmltodict==0.14.2
-yfinance==0.2.55
-youtube_search==2.1.2
-youtube_transcript_api==1.0.3
-yt_dlp==2025.3.31
-zep_python==2.0.2
+Flask==3.1.1
+langchain==0.3.27
+langchain_community==0.3.27
+langchain_core==0.3.74
+langchain_huggingface==0.3.1
+langchain_openai==0.3.30
+langchain_together==0.3.1
